--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -6,27 +6,28 @@ body {
     background-position: center;
 }
 
-
 /* Main y grids */
 main {
     padding: 2rem;
 }
 
 .grid-galeria {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 2rem;
-    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 200px;       /* separación simétrica */
+    padding: 40px 0;
+    width: 100%;
 }
 
 /* Cards */
 .card-Container {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
+    gap: 40px;
     padding: 40px 20px;
-    background-color: #f4f4f4;
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 .card {
@@ -132,20 +133,7 @@ main {
     background-color: #000;
 }
 
-/* Cartel socio */
-#socio-cartel {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    background-color: #111;
-    color: #fff;
-    padding: 20px 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    display: none;
-    z-index: 999;
-    animation: fadeIn 0.5s ease-in;
-}
+
 /* Wrapper */
 .wrapper {
     flex: 1;
